--- a/frontend/restaurant/src/default/css/index.css
+++ b/frontend/restaurant/src/default/css/index.css
@@ -1,3 +1,11 @@
+:root {
+  --blue: #154e64;
+  --white: #ededf1;
+  --black: #29292c;
+  --light: 50;
+  --treshold: 65;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +18,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.content {
+  margin-top: 50px;
+}
+
+a {
+  text-decoration: none;
 }
