--- a/frontend/restaurant/src/restaurant/css/orderBar.css
+++ b/frontend/restaurant/src/restaurant/css/orderBar.css
@@ -1,44 +1,24 @@
 #order-bar {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    border-top: solid 2px var(--black);
-}
-
-#order-data {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-#order-data a {
-    color: var(--black);
-    width: 33.3%;
-    text-align: center;
-    padding: 10px 0;
-    font-size: 12px;
-}
-
-#order-continue {
     display: flex;
     align-items: center;
     background-color: var(--blue);
-    width: 100%;
+    position: fixed;
+    bottom: 0;
     Height: 50px;
+    width: 100%;
     z-index: 9999;
-    box-shadow: 0px 3px 10px #00000050;
+    box-shadow: 0px -3px 10px #00000050;
     justify-content: space-around;
     color: var(--white);
 }
 
-#order-continue a {
+#order-bar a {
     color: var(--white);
     text-align: center;
     padding: 14.2px;
     width: 50%;
 }
-#order-continue a:hover {
+#order-bar a:hover {
     background-color: rgba(0, 0, 0, .12);
 }
 
