Refactor whole restaurant frontend for consistancy and bug fixing

--- a/frontend/restaurant/src/restaurant/css/home.css
+++ b/frontend/restaurant/src/restaurant/css/home.css
@@ -5,8 +5,8 @@
 }
 
 #table a {
-    background-color: var(--black);
-    color: var(--white);
+    border: var(--black) solid 2px;
+    color: var(--black);
     margin: 10px;
     padding: 5px 10px;
 }
