--- a/frontend/restaurant/src/restaurant/css/navbar.css
+++ b/frontend/restaurant/src/restaurant/css/navbar.css
@@ -1,10 +1,11 @@
 #nav-bar {
     display: flex;
     align-items: center;
-    background-color: var(--blue);
+    background-color: var(--color1);
     top: 0;
     width: 100%;
-    Height: 50px;
+    height: 50px;
+    max-height: 50px;
     z-index: 9999;
     box-shadow: 0px 3px 10px #00000050;
     position: fixed;
@@ -12,10 +13,25 @@
     color: var(--white);
 }
 
+#nav-bar div {
+    width: 15%;
+}
+
+#nav-bar h4 {
+    margin: 0;
+    font-size: 22px;
+    font-weight: 500;
+}
+
 #nav-bar a {
     text-decoration: none;
     color: var(--white);
-    padding: 14.2px 12px;
+    padding: 14px 12px;
+}
+
+#nav-bar img {
+    height: 20px;
+    margin-left: 20px;
 }
 
 #nav-items {
@@ -29,4 +45,10 @@
 
 #nav-items a:hover {
     background-color: rgba(0, 0, 0, .12);
+}
+
+@media (max-width: 400px) {
+    #nav-bar h4 {
+        font-size: 18px;
+    }
 }
