--- a/frontend/restaurant/src/restaurant/css/orderBar.css
+++ b/frontend/restaurant/src/restaurant/css/orderBar.css
@@ -1,10 +1,11 @@
 #order-bar {
     display: flex;
     align-items: center;
-    background-color: var(--blue);
+    background-color: var(--color1);
     position: fixed;
     bottom: 0;
-    Height: 50px;
+    height: 50px;
+    max-height: 50px;
     width: 100%;
     z-index: 9999;
     box-shadow: 0px -3px 10px #00000050;
