--- a/frontend/kitchen/src/css/navbar.css
+++ b/frontend/kitchen/src/css/navbar.css
@@ -1,7 +1,7 @@
 #nav-bar {
     display: flex;
     align-items: center;
-    background-color: var(--color1);
+    background-color: #343a40;
     top: 0;
     width: 100%;
     height: 50px;
