--- a/frontend/kitchen/src/css/App.css
+++ b/frontend/kitchen/src/css/App.css
@@ -24,6 +24,7 @@
 
 .column {
     width: calc(25% - 20px);
+    max-height: calc(100% - 40px);
     margin: 20px 0;
     background-color: white;
     overflow: auto;
