--- a/frontend/restaurant/src/css/orderBar.css
+++ b/frontend/restaurant/src/css/orderBar.css
@@ -1,28 +1,23 @@
-#order-bar {
-    display: flex;
-    align-items: center;
-    background-color: var(--color1);
-    position: fixed;
-    bottom: 0;
-    height: 50px;
-    max-height: 50px;
-    width: 100%;
-    z-index: 9999;
-    box-shadow: 0px -3px 10px #00000050;
-    justify-content: space-around;
-    color: var(--white);
-}
+/*.complete-order {*/
+/*    position: fixed;*/
+/*    width: 94%;*/
+/*    max-width: 650px;*/
+/*    height: 40px;*/
+/*    line-height: 40px;*/
+/*    margin: auto auto 10px;*/
+/*    bottom: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    z-index: 9999;*/
+/*    display: flex;*/
+/*    text-align: center;*/
+/*    border-radius: 5px;*/
+/*}*/
 
-#order-bar a {
-    color: var(--white);
-    text-align: center;
-    padding: 14.2px;
-    width: 50%;
-}
-#order-bar a:hover {
-    background-color: rgba(0, 0, 0, .12);
-}
+/*.complete-order a {*/
+/*    width: 100%;*/
+/*}*/
 
-@media screen and (max-width: 550px) {
-
-}
+/*.complete-order a:hover {*/
+/*    background-color: rgba(0, 0, 0, .12);*/
+/*}*/
