First part of refactoring

--- a/frontend/kitchen/src/css/App.css
+++ b/frontend/kitchen/src/css/App.css
@@ -3,6 +3,9 @@
 #root {
   height: 100vh;
   max-height: 100vh;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   background-color: #f0eded;
