--- a/frontend/kitchen/src/css/card.css
+++ b/frontend/kitchen/src/css/card.css
@@ -7,7 +7,10 @@
 .card {
   width: 200px;
   height: 100px;
-  margin-top: 10vh;
+  border: 20px #000 solid;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
   border-radius: 30px;
 }
 .card .content {
@@ -21,6 +24,11 @@
 }
 
 .card .content h2 {
-  font-size: 20px;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.card .content p {
+  font-size: 24px;
   margin-bottom: 10px;
 }
