--- a/frontend/restaurant/src/css/menu.css
+++ b/frontend/restaurant/src/css/menu.css
@@ -5,7 +5,7 @@
 .item-flex {
     display: flex;
     flex-flow: wrap;
-    align-content: space-between;
+    align-content: space-between !important;
     width: 80%;
     padding: 0 10%;
 }
