Added order items to ordercolumn

--- a/frontend/kitchen/src/css/card.css
+++ b/frontend/kitchen/src/css/card.css
@@ -6,11 +6,7 @@
 
 .card {
   width: 200px;
-  height: 100px;
-  border: 20px #000 solid;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
   border-radius: 30px;
 }
 .card .content {
@@ -18,17 +14,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 20px 0;
+  padding-bottom: 20px;
   bottom: 10px;
   flex-direction: column;
 }
 
-.card .content h2 {
-  font-size: 15px;
+.card .content h1 {
+  font-size: 24px;
   margin-bottom: 10px;
 }
 
-.card .content p {
-  font-size: 24px;
-  margin-bottom: 10px;
+.card .content * {
+  font-size: 15px;
+}
+
+.card .content ul {
+  list-style-type: none;
+  margin-bottom: 0;
 }
