--- a/frontend/kitchen/src/css/ordercolumn.css
+++ b/frontend/kitchen/src/css/ordercolumn.css
@@ -12,7 +12,7 @@
 
 .main .items {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
