--- a/frontend/kitchen/src/css/card.css
+++ b/frontend/kitchen/src/css/card.css
@@ -1,34 +1,31 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .card {
   width: 200px;
   height: 100px;
-  border: 20px #000 solid;
   margin-top: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
-  border-radius: 30px;
 }
 .card .content {
-  margin-top: 20px;
+  margin-top: 10px;
+  
+  
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 20px 0;
-  bottom: 10px;
   flex-direction: column;
+}
+
+.card:hover
+{
+  opacity: 80%;
 }
 
 .card .content h2 {
   font-size: 15px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .card .content p {
   font-size: 24px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
