--- a/frontend/kitchen/src/css/navbar.css
+++ b/frontend/kitchen/src/css/navbar.css
@@ -4,13 +4,13 @@
     background-color: #343a40;
     top: 0;
     width: 100%;
-    height: 50px;
-    max-height: 50px;
+    height: 60px;
     z-index: 9999;
     box-shadow: 0px 3px 10px #00000050;
     position: fixed;
     justify-content: space-between;
-    color: var(--white);
+    color: black;
+    
 }
 
 #nav-bar .btn {
