--- a/frontend/kitchen/src/css/card.css
+++ b/frontend/kitchen/src/css/card.css
@@ -1,18 +1,9 @@
 .card {
   width: 200px;
-  height: 100px;
   margin-top: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
-}
-.card .content {
-  margin-top: 10px;
-  
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  padding-top: 10px;
 }
 
 .card:hover
@@ -20,17 +11,16 @@
   opacity: 80%;
 }
 
-.card .content h2 {
-  font-size: 15px;
-  /* margin-bottom: 10px; */
+.card .content h1 {
+  font-size: 24px;
 }
 
-.card .content p {
-  font-size: 24px;
-  /* margin-bottom: 10px; */
+.card .content * {
+  font-size: 15px;
 }
 
 .card .content ul {
   list-style-type: none;
   margin-bottom: 0;
+  padding: 0;
 }
