--- a/frontend/kitchen/src/css/loginpage.css
+++ b/frontend/kitchen/src/css/loginpage.css
@@ -4,3 +4,9 @@
 .input-group .input-group-text {
     width: 100%;
 }
+
+.login {
+    text-align: center;
+    margin: auto;
+    min-width : 20vw;
+}
